tests/reject/tbind4.nim
discard """
  file: "mbind4.nim"
  line: 6
  errormsg: "undeclared identifier: \'lastId\'"
"""
# Module B
import mbind4

echo genId()




